--- a/index.html
+++ b/index.html
@@ -184,6 +184,8 @@ footer a:hover {
       4-corner perspective correction. No installation required—just open and create.
     </p>
     <a href="app.html" class="cta-button">Launch App →</a>
+    <br><br>
+    <img src="demo.gif" />
   </div>
 
   <div class="features">
